--- a/src/lib/translations/se.json
+++ b/src/lib/translations/se.json
@@ -74,9 +74,39 @@
       "tools": "Verktyg"
     }
   },
+  "projectPage": {
+    "title": "Projekt",
+    "subtitle": "Tidigare projekt jag har gjort som en del av en utbildning eller för att hålla mig uppdaterad. De flesta äldre repos innehåller en readme-fil med projektets avsedda funktionalitet etc.",
+    "projectItems": {
+      "item1": {
+        "description": "Källkod för detta webbplatsprojekt. Omgjord från ett liknande projekt jag gjorde 2024 som använde Angular istället."
+      },
+      "item2": {
+        "description": "Personligt projekt bestående av en app där man kunde lägga in utgifter och inkomster för att få en överblick över sin ekonomi. Skulle innehålla tabeller med olika filter för specifika poster etc."
+      },
+      "item3": {
+        "description": "Personligt projekt för att underhålla mina kunskaper. Skulle fungera som en tjänst där man köper och registrerar produkter med en aktiveringsnyckel. Arkivet innehåller en readme-fil med ett grovt första utkast av den avsedda funktionen."
+      },
+      "item4": {
+        "description": "Sten, sax, papper-spelet skapat med React och gjort som en del av min utbildning."
+      },
+      "item5": {
+        "description": "Spel skapat med fokus på testning, eftersom det utvecklades i en kurs inriktad på enhetstestning."
+      },
+      "item6": {
+        "description": "Bibliotekshanterare med inloggning och koppling till MongoDB. Skapad som en del av min utbildning och testades med Postman."
+      },
+      "item7": {
+        "description": "En del av min utbildning, med fokus på databasdesign och uppsättning av enkla CRUD-operationer."
+      }
+    }
+  },
   "navbar": {
     "about": "Om mig",
-    "home": "Home",
-    "projects": "Projects"
+    "home": "Hem",
+    "projects": "Projekt"
+  },
+  "footer": {
+    "credits": "Gjort med SvelteKit, design av mig"
   }
 }
