Progress in redesign landing page

--- a/src/lib/translations/en.json
+++ b/src/lib/translations/en.json
@@ -7,54 +7,75 @@
         "span3": "I’m based in Växjö but open to roles across southern Sweden — or remote! I'm known for being creative, detail-oriented, and solution-focused, which led to me taking on additional responsibility for UI quality assurance in my previous role. That also meant close collaboration with designers, product owners, and business analysts, which I genuinely enjoyed.",
         "span4": "If you're looking for someone with a mix of technical know-how, creativity, and a friendly team spirit — let’s talk!"
       },
-      "aboutTitle": "About me"
+      "aboutTitle": "Get to know me",
+      "item1": {
+        "title": "Who am I?",
+        "description": "My name is Jonatan Ljung, a web developer with just over two years of experience at INBooks. I’m currently on the lookout for new opportunities where I can contribute with both technical skills and creative thinking — and keep growing as a developer."
+      },
+      "item2": {
+        "title": "What I bring?",
+        "description": "I have a full-stack background with experience in Java, HTML/CSS, JavaScript, TypeScript, and PostgreSQL. I’ve worked extensively with Angular and AngularJS to build dynamic, user-friendly applications. Lately, I’ve been diving into C# and Flutter to expand my toolkit even further."
+      },
+      "item3": {
+        "title": "Why me?",
+        "description": "I’m based in Växjö, but open to remote work or roles across southern Sweden. I’m creative, detail-oriented, and solution-focused — traits that led me to take on UI quality assurance and collaborate closely with designers, product owners, and analysts in my previous role. If you're after someone who combines tech skills with a strong team spirit — let’s talk!"
+      }
     },
     "experienceSection": {
       "resumeItems": {
         "item1": {
           "description": "Labour market training course focusing on C#, but also React, database design and some AI engineering. In addition to this there's also a roughly three month long internship towards the end.",
           "subtitle": "July 2025 - April 2026",
-          "title": "Lexicon - IT extension course"
+          "title": "Lexicon - IT extension course",
+          "months": "July - April"
         },
         "item2": {
           "description": "Focused on full-stack development and database management. Initially developed an accounting program and later a property management system. Emphasized meeting specific market needs as well as user-friendliness.",
           "subtitle": "November 2021 - January 2024",
-          "title": "INBooks AB - Web developer"
+          "title": "INBooks AB - Web developer",
+          "months": "November - January"
         },
         "item3": {
           "description": "Assigned to ATEA, where I worked on computer formatting from various companies and authorities.",
           "subtitle": "May 2019 - August 2019",
-          "title": "Maxkompetens - Consultant"
+          "title": "Maxkompetens - Consultant",
+          "months": "May - August"
         },
         "item4": {
           "description": "Assigned to ATEA, where I worked on reconditioning mobile phones and tablets from various companies and authorities.",
           "subtitle": "August 2018 – September 2018",
-          "title": "Inpeople - Consultant"
+          "title": "Inpeople - Consultant",
+          "months": "August - September"
         },
         "item5": {
           "description": "Vocational education in programming, mainly Java, but also some HTML, CSS, JavaScript, SQL, among others. Also had some courses on agile methods.",
           "subtitle": "August 2019 - May 2021",
-          "title": "Ec Utbildning - Java Developer"
+          "title": "Ec Utbildning - Java Developer",
+          "months": "August - May"
         },
         "item6": {
           "description": "University education in computer science, including programming, electronics, and typical engineering courses such as physics and mathematics. Later chose to discontinue the education due to mismatched quality and relevance to expectations.",
           "subtitle": "September 2018 - Discontinued",
-          "title": "Linnéuniversitetet - Bachelor of Engineering"
+          "title": "Linnéuniversitetet - Bachelor of Engineering",
+          "months": "September - Discontinued"
         },
         "item7": {
           "description": "Supplementary education with various high school courses to achieve eligibility for further education.",
           "subtitle": "September 2017 - June 2018",
-          "title": "Linnéuniversitetet - Technical Preparatory Year"
+          "title": "Linnéuniversitetet - Technical Preparatory Year",
+          "months": "September - June"
         },
         "item8": {
           "description": "Previously worked as a metal-CNC machine operator, cleaner at Växjö Lasarett, responsible for furniture assembly and work in wood-CNC. Also, experienced in grocery retail with focus on stocking and fronting, and worked as a mattress assembler on a semi-automated line.",
           "subtitle": "May 2015 - July 2018",
-          "title": "Various companies"
+          "title": "Various companies",
+          "months": "May - July"
         },
         "item9": {
           "description": "High school education in cabinetmaking and interior design, including a significant amount of design work, primarily in furniture design but also in graphic design.",
           "subtitle": "August 2011 - June 2014",
-          "title": "Kungsmadskolan - Carpentry"
+          "title": "Kungsmadskolan - Carpentry",
+          "months": "August - June"
         }
       },
       "title": "Experience & education"
