--- a/src/lib/translations/se.json
+++ b/src/lib/translations/se.json
@@ -7,54 +7,75 @@
         "span3": "Jag är baserad i Växjö men öppen för roller i södra Sverige – eller på distans! Jag är känd för att vara kreativ, detaljorienterad och lösningsfokuserad, vilket ledde till att jag tog extra ansvar för UI-kvalitetssäkring i min tidigare roll. Det innebar också ett nära samarbete med designers, produktägare och affärsanalytiker, vilket jag verkligen uppskattade.",
         "span4": "Om du letar efter någon med en blandning av teknisk kunskap, kreativitet och en vänlig laganda – hör av er!"
       },
-      "aboutTitle": "Om mig"
+      "aboutTitle": "Lär känna mig",
+      "item1": {
+        "title": "Vem är jag?",
+        "description": "Mitt namn är Jonatan Ljung, webbutvecklare med strax över två års erfarenhet på INBooks. Jag letar just nu efter nya möjligheter där jag kan bidra med både tekniskt kunnande och kreativt tänkande — och fortsätta växa som utvecklare."
+      },
+      "item2": {
+        "title": "Vad bidrar jag med?",
+        "description": "Jag har en bakgrund av fullstack med erfarenhet inom Java, HTML/CSS, JavaScript, TypeScript och PostgreSQL. Jag har jobbat mycket med Angular och AngularJs för att bygga dynamiska och användarvänliga applikationer. På senare tid har jag även börjat dyka ner i C# och Flutter för att ytterligare utöka min verktygslåda."
+      },
+      "item3": {
+        "title": "Varför mig?",
+        "description": "Jag är bosatt i Växjö, men är öppen för roller på distans eller i södra Sverige. Jag är kreativ, detaljorienterad och lösningsfokuserad — egenskaper som gjorde att jag fick ta ansvar för kvalitetssäkring av gränssnittet och samarbetade nära designers, produktägare och business analysts i min förra roll. Om du letar efter någon som kombinerar tekniskt kunnande med en stark laganda — hör av dig!"
+      }
     },
     "experienceSection": {
       "resumeItems": {
         "item1": {
           "description": "Arbetsmarknadsutbildning med fokus på C#, men också React, databasdesign och AI. Utöver detta kommer även en ca tre månader lång praktik i slutet av utbildningen. ",
           "subtitle": "Juli 2025 - April 2026",
-          "title": "Lexicon - IT-påbyggnad"
+          "title": "Lexicon - IT-påbyggnad",
+          "months": "Juli - April"
         },
         "item2": {
           "description": "Webbutvecklare med fokus på fullstackutveckling och databashantering. Utvecklade först ett bokföringsprogram och senare även ett fastighetssystem. Hade fokus på att möta specifika marknadsbehov men också användarvänlighet.",
           "subtitle": "November 2021 - Januari 2024",
-          "title": "INBooks AB - Webbutvecklare"
+          "title": "INBooks AB - Webbutvecklare",
+          "months": "November - Januari"
         },
         "item3": {
           "description": "Uthyrning till ATEA där jag arbetade med formatering av datorer från olika företag och myndigheter.",
           "subtitle": "Maj 2019 - Augusti 2019",
-          "title": "Maxkompetens - Konsult"
+          "title": "Maxkompetens - Konsult",
+          "months": "Maj - Augusti"
         },
         "item4": {
           "description": "Uthyrning till ATEA där jag arbetade med rekonditionering av mobiler och surfplattor från olika företag och myndigheter.",
           "subtitle": "Augusti 2018 – September 2018",
-          "title": "Inpeople - Konsult"
+          "title": "Inpeople - Konsult",
+          "months": "Augusti - September"
         },
         "item5": {
           "description": "Yrkeshögskoleutbildning inom programmering. Främst Java, men även en del HTML, CSS, JavaScript, SQL, med flera. Det förekom även några kurser med agila metoder.",
           "subtitle": "Augusti 2019 - Maj 2021",
-          "title": "Ec Utbildning - Javautvecklare"
+          "title": "Ec Utbildning - Javautvecklare",
+          "months": "Augusti - Maj"
         },
         "item6": {
           "description": "Universitetsutbildning inom datavetenskap. En del programmering och ellära förekom, samt ingenjörstypiska kurser så som fysik och matematik. Jag valde senare att avbryta utbildningen på grund av att utbildningens kvalitet och relevans inte motsvarade mina förväntningar.",
           "subtitle": "September 2018 - Avbruten",
-          "title": "Linnéuniversitetet - Högskoleingenjör"
+          "title": "Linnéuniversitetet - Högskoleingenjör",
+          "months": "September - Avbruten"
         },
         "item7": {
           "description": "Kompletterande utbildning med olika gymnasiekurser för att uppnå behörighet till vidareutbildning.",
           "subtitle": "September 2017 - Juni 2018",
-          "title": "Linnéuniversitetet - Tekniskt basår"
+          "title": "Linnéuniversitetet - Tekniskt basår",
+          "months": "September - Juni"
         },
         "item8": {
           "description": "Tidigare har jag bland annat arbetat som maskinförare inom metall-CNC, lokalvårdare på Växjö Lasarett, och haft ansvar för montering av möbler samt arbete inom trä-CNC. Dessutom har jag erfarenhet från dagligvaruhandeln med fokus på varuuppackning och frontning, samt arbete som madrassmontör på ett semiautomatiserat band.",
           "subtitle": "Maj 2015 – Juli 2018",
-          "title": "Diverse företag"
+          "title": "Diverse företag",
+          "months": "Maj - Juli"
         },
         "item9": {
           "description": "Gymnasieutbildning inom möbelsnickeri och inredning. Innehöll även en betydande mängd designarbete, främst inom möbeldesign men även inom grafisk design.",
           "subtitle": "Augusti 2011 - Juni 2014",
-          "title": "Kungsmadskolan - Möbelsnickare"
+          "title": "Kungsmadskolan - Möbelsnickare",
+          "months": "Augusti - Juni"
         }
       },
       "title": "Erfarenhet & utbildning"
